# Trading_Setup

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  install.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
config/: config.example.yaml  logging.yaml
docs/: architecture.md  install.md
docs/runbooks/: broker_outage.md  kill_switch.md  postmortem_template.md  safe_mode_recovery.md
docs/strategies/: intraday_equity.md  options.md  swing.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: backup.py
src/trader/: __init__.py  app.py  cli.py
src/trader/api/: README.md  __init__.py  server.py
src/trader/backtest/: README.md  __init__.py  cost_model.py  engine.py  metrics.py  portfolio.py  runner.py  simulator.py
src/trader/brokers/: README.md  __init__.py  base.py  exceptions.py
src/trader/config/: README.md  __init__.py  loader.py  paths.py  secrets.py  settings.py
src/trader/core/: README.md  __init__.py  domain.py  enums.py  events.py
src/trader/execution/: README.md  __init__.py  gateway.py  router.py  state_machine.py
src/trader/features/: README.md  __init__.py  bar_builder.py  session.py  streaming.py
src/trader/indicators/: README.md  __init__.py  rolling.py  strength.py  trend.py
src/trader/marketdata/: README.md  __init__.py  backfill.py  chain_snapshotter.py  client.py  universe.py
src/trader/ml/: README.md  __init__.py  drift.py  feature_pipelines.py  meta_labeler.py  monte_carlo.py  regime.py  vol_forecast.py  walkforward.py
src/trader/notifications/: README.md  __init__.py  base.py  dispatcher.py  email.py  telegram.py
src/trader/observability/: README.md  __init__.py  health.py  logging.py  metrics.py
src/trader/ops/: README.md  __init__.py  safe_mode.py  watchdog.py
src/trader/options/: README.md  __init__.py  chain.py  greeks.py  iv_rank.py
src/trader/portfolio/: README.md  __init__.py  (+2 more)
tests/: conftest.py
tests/contract/: test_dhan_client.py
tests/unit/: test_backtest.py  test_capital_ramp.py  test_config.py  test_domain.py  test_features.py  test_indicators.py  test_journal.py  test_ml.py  test_notifications.py  test_options.py  test_paths.py  test_reconciler.py  test_redis_optional.py  test_risk.py  test_router.py  test_safe_mode.py  test_secrets.py  test_state_machine.py  test_strategies_equity.py  test_watchdog.py
(+44 files in other folders)
