[project]
name = "trader"
version = "0.1.0"
description = "Institutional-grade, local-only automated trading system for Indian markets (Dhan/Groww)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "trader" }]

dependencies = [
    # Web + API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.2",
    "websockets>=13.1",

    # Config / models
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",

    # Data
    "polars>=1.10.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "scipy>=1.14.1",

    # Storage
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0",
    "redis>=5.1.1",

    # Scheduling
    "apscheduler>=3.10.4",
    "pytz>=2024.2",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.2 ; sys_platform == 'win32'",

    # Observability
    "structlog>=24.4.0",
    "rich>=13.9.2",
    "prometheus-client>=0.21.0",

    # Security
    "cryptography>=43.0.1",
    "argon2-cffi>=23.1.0",

    # ML (Phase 4)
    "scikit-learn>=1.5.2",
    "lightgbm>=4.5.0",
    "xgboost>=2.1.1",
    "mlflow>=2.16.2",

    # Utilities
    "typer>=0.12.5",
    "tenacity>=9.0.0",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
    "freezegun>=1.5.1",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "hypothesis>=6.112.4",
]

[project.scripts]
trader = "trader.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "contract: broker contract tests (require recorded fixtures)",
    "integration: require Redis / DB",
    "slow: slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "C4", "PT", "RET", "ARG"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "tests/"]
